--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "16.0.3",
@@ -48,6 +49,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
