--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 # .github/workflows/build.yml
-name: Webhook test
+name: Build
 
 on:
   pull_request:
@@ -14,6 +14,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
+          version: 10
           run_install: false
 
       - uses: actions/setup-node@v4
