--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,5 @@
 # .github/workflows/lint.yml
-name: ESLint Check
+name: Lint & Format Check
 
 on:
   pull_request:
@@ -14,6 +14,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
+          version: 10
           run_install: false
 
       - uses: actions/setup-node@v4
@@ -26,3 +27,6 @@ jobs:
 
       - name: Run ESLint
         run: pnpm lint
+
+      - name: Check Prettier formatting
+        run: pnpm format:check
