--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -1,5 +1,5 @@
 # .github/workflows/tsc.yml
-name: TypeScript Check (tsc)
+name: TypeScript Check
 
 on:
   pull_request:
@@ -14,6 +14,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
+          version: 10
           run_install: false
 
       - uses: actions/setup-node@v4
@@ -24,5 +25,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run TypeScript
-        run: pnpm tsc --noEmit
+      - name: Run TypeScript check
+        run: npx tsc --noEmit
