--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -26,4 +26,4 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run TypeScript check
-        run: npx tsc --noEmit
+        run: pnpm type-check
